--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pizzaria Piccola Italia</title>
+    <title>Pizzaria Vita Italia</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,8 +16,7 @@
     <nav id="nav">
       <div class="wrapper">
         <div class="logo">
-          <h1 class="name_sector">Pizzaria </h1>
-          <h1 class="name_company">Piccola <span>Italia</span></h1>
+          <h1 class="name_company">Vita <span>Italia</span>.</h1>
 
         </div>
          
@@ -156,7 +155,7 @@
       <div class="wrapper">
         <div class="col-a">
           <header>
-            <h4>BOAS-VINDAS A PIZZARIA PICCOLA ITALIA 👋</h4>
+            <h4>BOAS-VINDAS A PIZZARIA VITA ITALIA 👋</h4>
             <h1>Venha conferir o melhor sabor da massa italiana!</h1>
           </header>
 
@@ -430,12 +429,12 @@
           
           <div class="logo">
             <h1 class="name_sector">Pizzaria</h1>
-            <h1 class="name_company">Piccola <span>Italia</span></h1>
+            <h1 class="name_company">Vita <span>Italia</span></h1>
   
           </div>
   
           <p>
-            ©2022 Piccola italia<br />
+            ©2022 Vita italia<br />
             Todos os direitos reservados.
           </p>
 
