--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
           
           <div class="logo">
             <h1 class="name_sector">Pizzaria</h1>
-            <h1 class="name_company">Vita <span>Italia</span></h1>
+            <h1 class="name_company">Vita <span>Italia</span>.</h1>
   
           </div>
   
